# vyatsu-data-analysis-bot

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  admin.py  backend.py  docker-compose.yml  env_example.txt  main.py  models.py  payments.py  pyproject.toml  requirements.txt  settings.py  user.py
app/: admin.py  backend.py  models.py  payments.py  user.py
data/: project.docx
src/: admin.py  backend.py  models.py  payments.py  settings.py  user.py
