[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vyatsu-data-analysis-bot"
version = "1.0.0"
description = "Telegram Bot для продажи файлов после оплаты через YooKassa"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vyatsu Data Analysis Bot", email = "sergeyrootuser@gmail.com"}
]
keywords = ["telegram", "bot", "yookassa", "payment", "data-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.8"
dependencies = [
    "aiogram>=3.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "python-docx>=0.8.11",
    "scikit-learn>=1.0.0",
    "seaborn>=0.11.0",
    "yookassa>=2.4.0",
    "pydantic-settings>=2.0.0",
    "SQLAlchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "greenlet>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/EgorRU/vyatsu-data-analysis-bot"
Repository = "https://github.com/EgorRU/vyatsu-data-analysis-bot"
Documentation = "https://github.com/EgorRU/vyatsu-data-analysis-bot#readme"
"Bug Tracker" = "https://github.com/EgorRU/vyatsu-data-analysis-bot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "venv*", "data*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
