[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vyatsu-data-analysis-bot"
version = "1.0.0"
description = "Telegram Bot для продажи файлов после оплаты через Telegram Payments"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vyatsu Data Analysis Bot", email = "sergeyrootuser@gmail.com"}
]
keywords = ["telegram", "bot", "payments", "invoice", "data-analysis"]
requires-python = ">=3.8"
dependencies = [
    "aiogram>=3.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "python-docx>=0.8.11",
    "scikit-learn>=1.0.0",
    "seaborn>=0.11.0",
    "pydantic-settings>=2.0.0",
    "SQLAlchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "greenlet>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/EgorRU/vyatsu-data-analysis-bot"
Repository = "https://github.com/EgorRU/vyatsu-data-analysis-bot"
Documentation = "https://github.com/EgorRU/vyatsu-data-analysis-bot#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["venv*", "data*"]